// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="items-center flex"
    >
      <div
        class="w-full min-w h-2 bg-gray rounded-sm"
      >
        <div
          class="h-2 rounded-sm bg-blue transition-[width] duration-300 ease-in"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders with percentage 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="items-center flex"
    >
      <div
        class="w-full min-w h-2 bg-gray rounded-sm"
      >
        <div
          class="h-2 rounded-sm bg-blue transition-[width] duration-300 ease-in"
          style="width: 50%;"
        />
      </div>
      <div
        class="ml-2"
      >
        <p
          class="m-0 text-xxs text-graphite font-semibold min-w leading-[1.125rem]"
        >
          50
          %
        </p>
      </div>
    </div>
  </div>
</div>
`;
